[package]
authors = ['Advanca Authors']
build = 'build.rs'
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-node'
version = '0.2.0'

[[bin]]
name = 'advanca-node'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies.advanca-runtime]
path = '../runtime'
version = '0.1.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c'
version = '2.0.0'
