[package]
authors = ['Advanca Authors']
build = 'build.rs'
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-node'
version = '0.2.0'

[[bin]]
name = 'advanca-node'

[dependencies]
futures                = '0.3.1'
log                    = '0.4.8'
structopt              = '0.3.8'

grandpa                = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", package = "sc-finality-grandpa" }

sc-basic-authorship    = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-cli                 = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura      = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-executor            = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-network             = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-service             = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool    = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }

sp-consensus           = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sp-core                = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sp-inherents           = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sp-runtime             = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool    = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git" }

advanca-runtime        = { path = "../runtime" }


[build-dependencies]
vergen                 = '3.0.4'
build-script-utils     = { tag = "v2.0.0-rc5", git = "http://github.com/paritytech/substrate.git", package = "substrate-build-script-utils" }
