[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-runtime'
version = '0.3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'advanca-core/std',
]

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '1.0.5'

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '0.8.0-alpha.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.advanca-core]
default-features = false
path = '../pallets/advanca-core'
version = '0.3.0'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'
