[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-runtime'
version = '0.2.0'

[features]
default = ['std']
std = [
    'aura/std',
    'grandpa/std',
    'indices/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'advanca-core/std',
]

[dependencies]
serde                      = { version = "1.0.101", features = ["derive"], optional = true }

codec                      = { version = "1.0.0", default-features = false, package = "parity-scale-codec" }

sp-api                     = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-block-builder           = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-consensus-aura          = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core                    = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-inherents               = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-io                      = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-offchain                = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime                 = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-session                 = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-std                     = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-transaction-pool        = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-version                 = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }

grandpa             = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-grandpa" }
indices             = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-indices" }
aura                = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-aura" }
balances                   = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-balances" }
randomness-collective-flip = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-randomness-collective-flip" }
sudo                       = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-sudo" }
timestamp                  = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-timestamp" }
transaction-payment        = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "pallet-transaction-payment" }

frame-executive            = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-support              = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false }
system                     = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", default-features = false, package = "frame-system" }

advanca-core               = { path = "../pallets/advanca-core", default-features = false }

[build-dependencies]
wasm-builder-runner        = { tag = "v2.0.0-rc5", git = "https://github.com/paritytech/substrate.git", package = "substrate-wasm-builder-runner" }
