[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-runtime'
version = '0.3.0'

[dependencies]
advanca-node-primitives = { path = "../advanca-node-primitives/", default-features = false }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'advanca-core/std',
    'advanca-node-primitives/std'
]

[build-dependencies.wasm-builder-runner]
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
version = '1.0.5'

[dependencies.aura]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
version = '2.0.0-rc5'

[dependencies.balances]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
version = '2.0.0-rc5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-executive]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.frame-support]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.grandpa]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
version = '2.0.0-rc5'

[dependencies.randomness-collective-flip]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
version = '2.0.0-rc5'

[dependencies.serde]
default-features = false
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-block-builder]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-consensus-aura]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-rc5'

[dependencies.sp-core]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-inherents]
tag = 'v2.0.0-rc5+2'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-io]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-offchain]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-session]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-transaction-pool]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-version]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sudo]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
version = '2.0.0-rc5'

[dependencies.system]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-rc5'

[dependencies.advanca-core]
default-features = false
path = '../pallets/advanca-core'
version = '0.3.0'

[dependencies.timestamp]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
version = '2.0.0-rc5'

[dependencies.transaction-payment]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
version = '2.0.0-rc5'
