[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-core'
version = '0.3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-api/std',
]

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dev-dependencies.balances]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1502626e45a704d1e2852e38ad669687ef02f68b'
version = '2.0.0-rc5'

[dependencies.smart-default]
default-features = false
version = "0.6.0"
