[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-core'
version = '0.3.0'

[dependencies]
advanca-node-primitives = { path = "../../advanca-node-primitives/", default-features = false }
advanca-crypto-types    = { path = "../../../../advanca-sgx-helper/advanca-crypto-types", default-features = false, features = ["substrate"] }
#sp-serializer           = { tag = "v2.0.0-rc5+2", git = 'https://github.com/paritytech/substrate.git', default-features = false }
serde_json              = { rev = "dfa96aba61cb3ea6751141079ecb144a00ef5e4a", git = "https://github.com/advanca/json.git", version = "1", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-api/std',
    'advanca-node-primitives/std',
#    'advanca-crypto-types/std_env',
#    'serde_json/std'
]

[dev-dependencies.sp-core]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dev-dependencies.sp-runtime]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dev-dependencies.balances]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
version = '2.0.0-rc5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.sp-api]
default-features = false
tag = 'v2.0.0-rc5+2'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'

[dependencies.smart-default]
default-features = false
version = "0.6.0"
