[package]
authors = ['Advanca Authors']
edition = '2018'
license = 'GPL-3.0'
name = 'advanca-core'
version = '0.4.0'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
advanca-node-primitives = { path = "../../advanca-node-primitives/", default-features = false }
advanca-crypto-types    = { branch = "feat/upgrade", git = "https://github.com/advanca/advanca-sgx-helper.git", default-features = false, features = ["substrate"] }
serde_json              = { rev = "dfa96aba61cb3ea6751141079ecb144a00ef5e4a", git = "https://github.com/advanca/json.git", version = "1", default-features = false, features = ["alloc"] }
schnorrkel              = { version = "0.9.1", default-features = false }
hex                     = { version = "0.4.2", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }



[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }

[dependencies.smart-default]
default-features = false
version = "0.6.0"


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-api/std',
    'advanca-node-primitives/std',
]
